--- a/Activite_Pratique_gestion_etudiants/etudiant_ap/src/main/resources/static/css/styleHome.css
+++ b/Activite_Pratique_gestion_etudiants/etudiant_ap/src/main/resources/static/css/styleHome.css
@@ -184,11 +184,16 @@ h1{
 
 .home-title span:nth-of-type(1)::before,
 .home-title span:nth-of-type(1)::after{
-    animation-delay: 1s;
+    animation-delay: 0.5s;
 }
 
 .home-title span:nth-of-type(2)::before,
 .home-title span:nth-of-type(2)::after{
+    animation-delay: 1s;
+}
+
+.home-title span:nth-of-type(3)::before,
+.home-title span:nth-of-type(3)::after{
     animation-delay: 1.5s;
 }
 
