--- a/Activite_Pratique_gestion_etudiants/etudiant_ap/src/main/resources/templates/login.html
+++ b/Activite_Pratique_gestion_etudiants/etudiant_ap/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 <body>
 <div class="login-box">
 
-    <h2>Login</h2>
+    <h2>Connexion</h2>
     <div class="alert alert-primary alert-dismissible fade show" role="alert" th:if="${param.error}" style="margin-bottom: 40px">
         <strong>Username ou password</strong> sont invalides.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
