--- a/Activite_Pratique_gestion_etudiants/etudiant_ap/src/main/resources/templates/newEtudiant.html
+++ b/Activite_Pratique_gestion_etudiants/etudiant_ap/src/main/resources/templates/newEtudiant.html
@@ -12,40 +12,40 @@
 
 <div layout:fragment="content">
     <div class="container-new">
-        <form method="post" th:action="@{/admin/save(page=${page}, keyword=${keyword})}">
+        <form method="post" th:action="@{/admin/save}">
             <div class="row">
                 <div class="col-half">
                     <h4 id="titre">Prénom</h4>
                     <div class="input-group input-group-icon">
-                        <input type="text" placeholder="Prénom" name="prenom" th:value="${etudiantForm.getPrenom()}"/>
+                        <input type="text" placeholder="Prénom" name="prenom" th:value="${etudiant.prenom}"/>
                         <div class="input-icon"><i class="fa fa-user"></i></div>
-                        <span  class="text-warning" th:errors="${etudiantForm.nom}"></span>
+                        <span  class="text-warning" th:errors="${etudiant.prenom}"></span>
                     </div>
                 </div>
                 <div class="col-half">
                     <h4>Nom</h4>
                     <div class="input-group input-group-icon">
-                        <input type="text" placeholder="Nom" name="nom" th:value="${etudiantForm.nom}"/>
+                        <input type="text" placeholder="Nom" name="nom" th:value="${etudiant.nom}"/>
                         <div class="input-icon"><i class="fa fa-user"></i></div>
-                        <span class="text-warning" th:errors="${etudiantForm.nom}"></span>
+                        <span class="text-warning" th:errors="${etudiant.nom}"></span>
                     </div>
                 </div>
             </div>
             <div class="row" style="margin-top: 20px">
                 <h4>Adresse Email</h4>
                 <div class="input-group input-group-icon">
-                    <input type="email" placeholder="Adresse Email" name="email" th:value="${etudiantForm.email}"/>
+                    <input type="email" placeholder="Adresse Email" name="email" th:value="${etudiant.email}"/>
                     <div class="input-icon" style="margin-left: 10px"><i class="fa fa-envelope" style="margin-right: 0;"></i></div>
-                    <span class="text-warning" th:errors="${etudiantForm.email}"></span>
+                    <span class="text-warning" th:errors="${etudiant.email}"></span>
                 </div>
             </div>
             <div class="row">
                 <div class="col-half">
                     <h4>Date de Naissance</h4>
                     <div class="input-group input-group-icon">
-                        <input type="date" placeholder="2000-04-20" name="dateNaissance" th:value="${etudiantForm.dateNaissance}"/>
+                        <input type="date" placeholder="2000-04-20" name="dateNaissance" th:value="${etudiant.dateNaissance}"/>
                         <div class="input-icon"><i class="fa fa-calendar-minus-o"></i></div>
-                        <span class="text-warning" th:errors="${etudiantForm.dateNaissance}"></span>
+                        <span class="text-warning" th:errors="${etudiant.dateNaissance}"></span>
                     </div>
                 </div>
                 <div class="col-half">
@@ -55,7 +55,7 @@
                         <label for="gender-male">MASCULIN</label>
                         <input id="gender-female" type="radio" name="genre" th:value="FEMININ" checked="true"/>
                         <label for="gender-female">FEMININ</label>
-                        <span class="text-warning" th:errors="${etudiantForm.genre}"></span>
+                        <span class="text-warning" th:errors="${etudiant.genre}"></span>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                     <label for="ouiRegle"><span><i class="fa fa-check" aria-hidden="true"></i>Oui</span></label>
                     <input id="nonRegle" type="radio" name="regle" th:value="0"/>
                     <label for="nonRegle"> <span><i class="fa fa-times" aria-hidden="true"></i>Non</span></label>
-                    <span class="text-warning" th:errors="${etudiantForm.regle}"></span>
+                    <span class="text-warning" th:errors="${etudiant.regle}"></span>
                 </div>
             </div>
             <div class="row">
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col-half">
                         <div class="input-group">
-                            <button type="button" class="buttonAnnuler">Annuler<a th:href="@{/user/index}" hidden></a></button>
+                            <a th:href="@{/user/index}" class="buttonAnnuler" style="text-decoration:none; ">Annuler</a>
                         </div>
                     </div>
                 </div>
